# home-security

./: .gitignore  README.md  pyproject.toml
docs/: ROADMAP.md
home_face_recognition/: __init__.py  config.py  matching.py  recognition.py  server.py  storage.py
home_face_recognition/static/: app.js  style.css
home_face_recognition/templates/: index.html
tests/: test_api.py  test_matching.py  test_storage.py
